<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot_password">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="647dp"
        android:layout_height="77dp"
        android:background="#e10032"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="352dp"
        android:layout_weight="1"
        android:text="@string/recover_password"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginStart="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/lol" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="7dp"
        android:fontFamily="monospace"
        android:text="@string/belegen"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_marginEnd="38dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/corners"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowColor="@android:color/darker_gray"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button"
        android:layout_width="162dp"
        android:layout_height="42dp"

        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:background="@drawable/buttons"
        android:drawableEnd="@drawable/signin2"
        android:drawablePadding="@android:dimen/notification_large_icon_height"
        android:text="@string/send"
        android:onClick="send_email"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="7dp"
        android:text="@string/enter_your_email_address"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>