<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:shadowColor="@android:color/darker_gray"
        android:padding="15dp"
        android:background="@drawable/list_item"
        android:layout_margin="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="ID#"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/employee_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:shadowColor="@android:color/darker_gray"
                android:text="@string/textview"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="right">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present"/>
        <Button
            android:id="@+id/button4"
            style="@style/btn"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:drawableTint="@color/dynamic_foreground_btn"
            android:text="@string/view" />
        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>





